--- a/uupd/changelog.txt
+++ b/uupd/changelog.txt
@@ -1,3 +1,8 @@
+= 2.2 - December 7, 2025 =
+* Testing auto-update system
+* Confirming updates work from WordPress admin
+* This version should appear as an available update!
+
 = 2.1 - December 7, 2025 =
 * Test update release
 * Minor improvements
